cleaned up code to be more readable

--- a/index.html
+++ b/index.html
@@ -30,27 +30,29 @@
         <a href="./report.html">Report</a>
       </nav>
     </header>
-<!--Wrap the links below in a header tag and then a nav tag-->
-<!--Add addresses to the links below-->
-<a href="">Home</a><a href="">Today's Sighting</a><a href="">Report</a>
-<!--Describe what goes in the main-->
-<main>
-<div class="hero"><div class="hero-text">
-<!-- What is an h1?-->
-<h1 class="title">Cryptid Watch</h1><p>Your home for the latest <br> cryptic sightings</p>
-</div>
-</div>
-<article>
-<h2>I want to believe</h2>
-<p>
-Here at Cryptid Watch we are dedicated to sharing stories from the witnesses with the public.
-Everyone is believed and everyone is welcome. 
-To see the latest report go to our Today's Sighting page. 
-To share you creepy encounter go to our Report page. 
-</p>    
-<p>Happy hunting.</p>
-</article></main>
-<!--What goes in the footer?-->
-<footer><a href="#">Join us on Discord</a></footer>
-</body>
+    <!--Describe what goes in the main-->
+    <main>
+      <div class="hero">
+        <div class="hero-text">
+        <!-- What is an h1?-->
+          <h1 class="title">Cryptid Watch</h1>
+          <p>Your home for the latest <br> cryptic sightings</p>
+        </div>
+      </div>
+      <article>
+        <h2>I want to believe</h2>
+        <p>
+          Here at Cryptid Watch we are dedicated to sharing stories from the witnesses with the public.
+          Everyone is believed and everyone is welcome. 
+          To see the latest report go to our Today's Sighting page. 
+          To share you creepy encounter go to our Report page. 
+        </p>    
+        <p>Happy hunting.</p>
+      </article>
+    </main>
+    <!--What goes in the footer?-->
+    <footer>
+      <a href="#">Join us on Discord</a>
+    </footer>
+  </body>
 </html>
