fixed html comment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--Describe the line below-->
+    <!--Describe the purpose of the line below-->
     <link rel="icon" href="https://glitch.com/favicon.ico" />
       
     <title>Cryptid Watch</title>
